--- a/GItTest/pom.xml
+++ b/GItTest/pom.xml
@@ -7,5 +7,5 @@
     <groupId>cn.itcast</groupId>
     <artifactId>GItTest</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+<!- didn't change anything -->
 </project>
